[package]
name = "vpsearch"
version = "1.3.3"
authors = ["Kornel <pornel@pornel.net>"]
description = "Vantage Point Tree search algorithm for fast nearest neighbour search in multi-dimensional metric spaces."
homepage = "https://github.com/pornel/vpsearch"
repository = "https://github.com/pornel/vpsearch.git"
documentation = "https://docs.rs/vpsearch/"
keywords = ["similarity", "search","knn","distance"]
license = "BSD-2-Clause"
categories = ["algorithms", "data-structures"]

[dependencies]
num-traits = "0.1.32"
