[package]
name = "vpsearch"
version = "1.3.6"
authors = ["Kornel <kornel@geekhood.net>"]
description = "Vantage Point Tree search algorithm for fast nearest neighbour search in multi-dimensional metric spaces."
homepage = "https://lib.rs/crates/vpsearch"
repository = "https://github.com/kornelski/vpsearch.git"
documentation = "https://docs.rs/vpsearch/"
keywords = ["similarity", "search", "knn", "distance"]
license = "BSD-2-Clause"
readme = "README.md"
categories = ["algorithms", "data-structures"]
edition = "2018"

[dependencies]
num-traits = "0.2.11"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
